--- a/src/styles/jsonldViewer.scss
+++ b/src/styles/jsonldViewer.scss
@@ -15,6 +15,12 @@
     }
     &-value {
         color: rgba($--color-primary, 0.7);
+        input {
+            width: 300px;
+            height: 22px;
+            text-indent: 5px;
+            margin-left: 10px;
+        }
     }
     &-array {
         display: flex;
